--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
     </head>
     <body>
     <div ng-controller="MainCtrl as mainCtrl">
-        <color-picker init-r="mainCtrl.r" init-g="mainCtrl.g" init-b="mainCtrl.b"></color-picker>
+        <color-picker init-r="{{ mainCtrl.r }}"
+                      init-g="{{ mainCtrl.g }}"
+                      init-b="{{ mainCtrl.b }}"
+                      on-color-change="mainCtrl.onColorChange(r, g, b)"></color-picker>
     </div>
 
         <!-- inject:js -->
