state after adding book details view

--- a/src/book-list/book-list.tpl.html
+++ b/src/book-list/book-list.tpl.html
@@ -10,7 +10,7 @@
     </thead>
     <tbody>
         <tr ng-repeat="book in bookListCtrl.books | filter:bookListCtrl.searchText">
-            <td ng-bind="book.title"></td>
+            <td><a ng-href="#/books/{{ book.isbn }}" ng-bind="book.title"></a></td>
             <td ng-bind="book.author"></td>
             <td ng-bind="book.isbn"></td>
         </tr>
