--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <!-- endinject -->
     </head>
     <body>
+        <h1>Book Application {{ now | date:'medium' }}</h1>
         <div ng-view></div>
 
     <!--<div ng-controller="MainCtrl as mainCtrl">
