state after introducing new book form

--- a/src/book-list/book-list.tpl.html
+++ b/src/book-list/book-list.tpl.html
@@ -16,3 +16,6 @@
         </tr>
     </tbody>
 </table>
+<div>
+    <span class="pull-right"><a href="#/new-book">Create New Book</a></span>
+</div>
